--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,9 @@ html, body {
 body::-webkit-scrollbar {
   display: none; /* Hides scrollbar in Chrome, Safari, Edge */
 }
+
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
